-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
If some race happen, dentry name which we copied is invalid,
we should return failure directly rather than continue.
Because Server doesn't support open-by-fid, we pass @name
as NULL, @len as 0, it will definitely trigger following
assertion in mdc_pack_name()
LustreError: 157839:0:(mdc_lib.c:137:mdc_pack_name()) LBUG
- is related to
-
LU-12020 LustreError: 32657:0:(mdc_lib.c:137:mdc_pack_name()) ASSERTION( lu_name_is_valid_2(buf, cpy_len) ) failed:
-
- Resolved
-